Add meta description for lighthouse score

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Portfolio</title>
   <base href="https://ice-blaze.github.io/portfolio2/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Resume website of Etienne 'ice-blaze' FRANK">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
