--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Portfolio</title>
-  <base href="https://ice-blaze.github.io/portfolio2/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Resume website of Etienne 'ice-blaze' FRANK">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
